--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-persist",
+  "name": "",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://l87r78.github.io/redux-persist/",
